Name:                kontrakcja-templates
Version:             0.9
Synopsis:
    Utilities for working with many HStringTemplate templates from files
Description:
    This library adds support for working with multiple templates in a single file,
    and .json files containing mapping from template names to multiple template versions
    (e.g. for translations)

License:             BSD3
License-file:        LICENSE
Author:              Scrive
Maintainer:          bartek@scrive.com
Build-type:          Simple
Stability:           None
Category:            Web
Cabal-version:       >=1.9

Library
  exposed-modules: Text.StringTemplates.Fields
                   Text.StringTemplates.Files
                   Text.StringTemplates.Templates
                   Text.StringTemplates.Templates.Class
                   Text.StringTemplates.TemplatesLoader
                   Text.StringTemplates.TextTemplates
                   Text.StringTemplates.Utils

  hs-source-dirs:  src
  GHC-Options:     -Wall -rtsopts
  Extensions:      FlexibleInstances,
                   UndecidableInstances,
                   GeneralizedNewtypeDeriving
  build-depends:   base >= 4 && < 6,
                   HStringTemplate >= 0.7.0,
                   exceptions >= 0.6,
                   containers >= 0.4.2.1,
                   utf8-string >= 0.3.6,
                   bytestring >= 0.9.2.1,
                   monad-control >= 0.3.1,
                   mtl >= 2.0.1.0,
                   transformers-base >= 0.4.1,
                   transformers >= 0.2.2,
                   time,
                   old-time >= 1.1,
                   directory >= 1.2,
                   html >= 1.0.1.2,
                   MissingH >= 1.2,
                   parsec >= 3.1.1,
                   fields-json >= 0.2.2.2,
                   json == 0.5
