Name:                kontrakcja-templates
Version:             0.10.0.1
Synopsis:
    Utilities for working with many HStringTemplate templates from files.
Description:
    This library adds support for working with multiple templates in a single
    file, and .json files containing a mapping from template names to multiple
    template versions (e.g. for translations).

Homepage:            https://github.com/scrive/kontrakcja-templates
License:             BSD3
License-file:        LICENSE
Author:              Scrive AB
Maintainer:          Bartek &#262;wik&#322;owski <bartek@scrive.com>
Copyright:           Scrive AB
Build-type:          Simple
Stability:           None
Category:            Web
Cabal-version:       >=1.9
Tested-with:         GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4,
                     GHC == 8.6.2

Source-repository head
  type:     git
  location: https://github.com/scrive/kontrakcja-templates.git

Library
  exposed-modules: Text.StringTemplates.Fields
                   Text.StringTemplates.Files
                   Text.StringTemplates.Templates
                   Text.StringTemplates.Templates.Class
                   Text.StringTemplates.TemplatesLoader
                   Text.StringTemplates.TextTemplates
                   Text.StringTemplates.Utils

  hs-source-dirs:  src
  GHC-Options:     -Wall
  Extensions:      FlexibleInstances,
                   UndecidableInstances,
                   GeneralizedNewtypeDeriving
  build-depends:   base >= 4 && < 6,
                   HStringTemplate >= 0.8.7,
                   exceptions >= 0.10.4,
                   containers >= 0.6.2.1,
                   utf8-string >= 1.0.1.1,
                   bytestring >= 0.10.10.0,
                   monad-control >= 1.0.2.3,
                   mtl >= 2.2.2,
                   transformers-base >= 0.4.5.2,
                   transformers >= 0.5.6.2,
                   time,
                   old-time >= 1.1.0.3,
                   directory >= 1.3.6.0,
                   html >= 1.0.1.2,
                   parsec >= 3.1.14,
                   fields-json >= 0.4.0.0,
                   json >= 0.10
